--- a/data/index.html
+++ b/data/index.html
@@ -11,9 +11,9 @@
 		<img src=Bell.png width=40 style="display: inline" />
 		<h1 style="display: inline">Scoops' Clock</h1>
 	</div>
-          <h3><span id=clock_name>CCC</span></h3>
-          <div class="txt_med">IP Addr: <span id=clock_ip>BBB</span></div><br>
-          <div class="txt_small">Last Sync: <span id=last_sync>AAA</span></div><br>
+          <h4><span id=clock_name>CCC</span></h4>
+          <div class="txt_med">IP Addr: <span id=clock_ip>BBB</span></div>
+          <div class="txt_small">Curr: <span id=curr_time>RRR</span><br>Last Sync: <span id=last_sync>AAA</span></div>
 			<div id="mute_controls" style="display: block; border: 1px solid rgb(68, 68, 68); padding: 5px; margin: 5px; width: 160px; background-color: rgb(238, 238, 238);">
 				<div>Muting</div>
 			    <input type="checkbox" name="mute_enab" id="mute_enab"> Enable <br>
@@ -63,52 +63,54 @@
 						&nbsp;<span class="txt_med"><button id="MR-btn" class="btn btn--s btn--blue">Reset</button>
 					<br><span id="clock_mute" class="txt_med_red">&nbsp;</span></span>
 				</div>
-			<br>
+			<hr style="height:2px; visibility:hidden;" />
 			<div>Mode</div>
 			<select name="clock_mode" id="clock_mode">
               <option value="0">Hour Only</option>
               <option value="1">Hour and Half Past</option>
               <option value="2">All Quarters</option>
 			</select><br>
-			<br>
+			<hr style="height:2px; visibility:hidden;" />
 				<div>Timezone</div>
 		  			<select  id="time_tz" name="time_tz">
-						<option value="-120">(GMT-12:00)</option>
-						<option value="-110">(GMT-11:00)</option>
-						<option value="-100">(GMT-10:00)</option>
-						<option value="-90">(GMT-09:00)</option>
-						<option value="-80">(GMT-08:00)</option>
-						<option value="-70">(GMT-07:00)</option>
-						<option value="-60">(GMT-06:00)</option>
-						<option value="-50">(GMT-05:00)</option>
-						<option value="-40">(GMT-04:00)</option>
-						<option value="-35">(GMT-03:30)</option>
-						<option value="-30">(GMT-03:00)</option>
-						<option value="-20">(GMT-02:00)</option>
-						<option value="-10">(GMT-01:00)</option>
+						<option value="-1200">(GMT-12:00)</option>
+						<option value="-1100">(GMT-11:00)</option>
+						<option value="-1000">(GMT-10:00)</option>
+						<option value="-900">(GMT-09:00)</option>
+						<option value="-800" selected>(GMT-08:00)</option>
+						<option value="-700">(GMT-07:00)</option>
+						<option value="-600">(GMT-06:00)</option>
+						<option value="-500">(GMT-05:00)</option>
+						<option value="-400">(GMT-04:00)</option>
+						<option value="-330">(GMT-03:30)</option>
+						<option value="-300">(GMT-03:00)</option>
+						<option value="-200">(GMT-02:00)</option>
+						<option value="-100">(GMT-01:00)</option>
 						<option value="0">(GMT+00:00)</option>
-						<option value="10">(GMT+01:00)</option>
-						<option value="20">(GMT+02:00)</option>
-						<option value="30">(GMT+03:00)</option>
-						<option value="35">(GMT+03:30)</option>
-						<option value="40">(GMT+04:00)</option>
-						<option value="45">(GMT+04:30)</option>
-						<option value="50">(GMT+05:00)</option>
-						<option value="55">(GMT+05:30)</option>
-						<option value="57">(GMT+05:45)</option>
-						<option value="60">(GMT+06:00)</option>
-						<option value="65">(GMT+06:30)</option>
-						<option value="70">(GMT+07:00)</option>
-						<option value="80">(GMT+08:00)</option>
-						<option value="90">(GMT+09:00)</option>
-						<option value="95">(GMT+09:30)</option>
+						<option value="100">(GMT+01:00)</option>
+						<option value="200">(GMT+02:00)</option>
+						<option value="300">(GMT+03:00)</option>
+						<option value="330">(GMT+03:30)</option>
+						<option value="400">(GMT+04:00)</option>
+						<option value="430">(GMT+04:30)</option>
+						<option value="500">(GMT+05:00)</option>
+						<option value="530">(GMT+05:30)</option>
+						<option value="545">(GMT+05:45)</option>
+						<option value="600">(GMT+06:00)</option>
+						<option value="630">(GMT+06:30)</option>
+						<option value="700">(GMT+07:00)</option>
+						<option value="800">(GMT+08:00)</option>
+						<option value="900">(GMT+09:00)</option>
+						<option value="930">(GMT+09:30)</option>
 						<option value="100">(GMT+10:00)</option>
 						<option value="110">(GMT+11:00)</option>
 						<option value="120">(GMT+12:00)</option>
 						<option value="120">(GMT+12:00)</option>
 						<option value="130">(GMT+13:00)</option>
 					</select>
-			<input type="checkbox" name="time_dst" id="time_dst"> Summer Time <br>
+			<input type="checkbox" name="time_dst" id="time_dst"> Summer Time
+			<hr style="height:2px; visibility:hidden;" />
+			NTP Server <input type="text" name="ntp_server" id="ntp_server" value="pool.ntp.org"><br>
         <div>
 			<br><button id="SV-btn" style="width:150px" class="btn btn--m btn--blue">Save</button></td>
 		</div>
@@ -121,7 +123,8 @@
   </div>
 	<script>
 		updateMuteTime();
-		var interval = setInterval(updateStuff, 1*60*1000); // Minutes
+		setInterval(updateStuff, 1*60*1000); // Minutes
+		setInterval(updateSecs, 1000); // Seconds
 		const butt_Sv = document.getElementById('SV-btn');
 		const butt_q1 = document.getElementById('Q1-btn');
 		const butt_hf = document.getElementById('HF-btn');
@@ -167,11 +170,21 @@
 				document.getElementsByTagName("head")[0].appendChild(a)
 			}
 		}
+		function updateSecs() {
+			updateCurrTime();
+		}
 		function updateStuff() {
 			updateMuteTime();
 			updateLastSync();
 		}
-
+		function updateCurrTime() {
+			fetch('CURTIME').then(function(response) {
+				return response.text();
+			}).then(function(resp) {
+				console.log(resp);
+				document.getElementById("curr_time").textContent = resp;
+			});
+		}
 		function updateLastSync() {
 			fetch('LASTSYNC').then(function(response) {
 				return response.text();
@@ -206,12 +219,15 @@
 			var mute_end_val = e.options[e.selectedIndex].value;
 			e = document.getElementById("time_dst");
 			var time_dst_val = e.checked;
+			e = document.getElementById("ntp_server");
+			var time_srv_val = e.value;
 			e = document.getElementById("mute_enab");
 			var mute_enab_val = e.checked;
 			postData("/SAVE", {
 				tz: tz_val, 
 				dst: time_dst_val,
 				mode: clock_mode_val,
+				server: time_srv_val,
 				mute: mute_enab_val,
 				mute_start: mute_start_val,
 				mute_end: mute_end_val
