Add Ship's clock

--- a/data/index.html
+++ b/data/index.html
@@ -70,6 +70,7 @@
               <option value="1">Hour and Half Past</option>
               <option value="2">All Quarters</option>
               <option value="3">Westminster</option>
+              <option value="4">Ship's</option>
 			</select><br>
 			<hr style="height:2px; visibility:hidden;" />
 				<div>Timezone</div>
