Make class for chime style definitions

--- a/data/index.html
+++ b/data/index.html
@@ -67,10 +67,11 @@
 			<div>Mode</div>
 			<select name="clock_mode" id="clock_mode">
               <option value="0">Hour Only</option>
-              <option value="1">Hour and Half Past</option>
-              <option value="2">All Quarters</option>
-              <option value="3">Westminster</option>
-              <option value="4">Ship's</option>
+              <option value="1">Hour + Half Single</option>
+              <option value="2">Hour + Half Multi</option>
+              <option value="3">All Quarters</option>
+              <option value="4">Westminster</option>
+              <option value="5">Ship's</option>
 			</select><br>
 			<hr style="height:2px; visibility:hidden;" />
 				<div>Timezone</div>
