--- a/data/index.html
+++ b/data/index.html
@@ -66,12 +66,13 @@
 			<hr style="height:2px; visibility:hidden;" />
 			<div>Mode</div>
 			<select name="clock_mode" id="clock_mode">
-              <option value="0">Hour Only</option>
-              <option value="1">Hour + Half Single</option>
-              <option value="2">Hour + Half Multi</option>
-              <option value="3">All Quarters</option>
-              <option value="4">Westminster</option>
-              <option value="5">Ship's</option>
+              <option value="0">Hour Only 1-2</option>
+              <option value="1">Hour + Half 1-2</option>
+              <option value="2">Hour + Half 3</option>
+              <option value="3">All Quarters 2</option>
+              <option value="4">All Quarters 3</option>
+              <option value="5">Westminster</option>
+              <option value="6">Ship's</option>
 			</select><br>
 			<hr style="height:2px; visibility:hidden;" />
 				<div>Timezone</div>
