--- a/data/index.html
+++ b/data/index.html
@@ -25,7 +25,7 @@
             <td><b><div class="txt_med" id=clock_ip>CCC</div></b></td>
         </tr>
     </table>
-			<div id="mute_controls" style="display: block; border: 1px solid rgb(68, 68, 68); padding: 5px; margin: 5px; width: 160px; background-color: rgb(238, 238, 238);">
+			<div id="mute_controls" style="display: block; border: 1px solid rgb(68, 68, 68); padding: 5px; margin: 5px; width: 150px; background-color: rgb(238, 238, 238);">
 				<div>Muting</div>
 			    <input type="checkbox" name="mute_enab" id="mute_enab"> Enable <br>
 				<div>Start Mute</div>
@@ -74,7 +74,7 @@
 						&nbsp;<span class="txt_med"><button id="MR-btn" class="btn btn--s btn--blue">Reset</button>
 					<br><span id="clock_mute" class="txt_med_red">&nbsp;</span></span>
 				</div>
-        <div><button id="SV-btn" style="width:150px" class="btn btn--m btn--blue">Save</button></td></div>
+        <div><button id="SV-btn" style="width:100px" class="btn btn--m btn--blue">Save</button></td></div>
 			<div>Mode</div>
 			<select name="clock_mode" id="clock_mode">
               <option value="0">Hour Only 1-2</option>
@@ -84,51 +84,53 @@
               <option value="4">All Quarters 3</option>
               <option value="5">Westminster</option>
               <option value="6">Ship's</option>
-			</select><br>
-			<hr style="height:2px; visibility:hidden;" />
-				<div>Timezone</div>
-		  			<select  id="time_tz" name="time_tz">
-						<option value="-1200">(GMT-12:00)</option>
-						<option value="-1100">(GMT-11:00)</option>
-						<option value="-1000">(GMT-10:00)</option>
-						<option value="-900">(GMT-09:00)</option>
-						<option value="-800" selected>(GMT-08:00)</option>
-						<option value="-700">(GMT-07:00)</option>
-						<option value="-600">(GMT-06:00)</option>
-						<option value="-500">(GMT-05:00)</option>
-						<option value="-400">(GMT-04:00)</option>
-						<option value="-330">(GMT-03:30)</option>
-						<option value="-300">(GMT-03:00)</option>
-						<option value="-200">(GMT-02:00)</option>
-						<option value="-100">(GMT-01:00)</option>
-						<option value="0">(GMT+00:00)</option>
-						<option value="100">(GMT+01:00)</option>
-						<option value="200">(GMT+02:00)</option>
-						<option value="300">(GMT+03:00)</option>
-						<option value="330">(GMT+03:30)</option>
-						<option value="400">(GMT+04:00)</option>
-						<option value="430">(GMT+04:30)</option>
-						<option value="500">(GMT+05:00)</option>
-						<option value="530">(GMT+05:30)</option>
-						<option value="545">(GMT+05:45)</option>
-						<option value="600">(GMT+06:00)</option>
-						<option value="630">(GMT+06:30)</option>
-						<option value="700">(GMT+07:00)</option>
-						<option value="800">(GMT+08:00)</option>
-						<option value="900">(GMT+09:00)</option>
-						<option value="930">(GMT+09:30)</option>
-						<option value="100">(GMT+10:00)</option>
-						<option value="110">(GMT+11:00)</option>
-						<option value="120">(GMT+12:00)</option>
-						<option value="120">(GMT+12:00)</option>
-						<option value="130">(GMT+13:00)</option>
-					</select>
+			</select>
+			<div class="txt_small"><br></div>
+			<div>Timezone</div>
+				<select  id="time_tz" name="time_tz">
+					<option value="-1200">(GMT-12:00)</option>
+					<option value="-1100">(GMT-11:00)</option>
+					<option value="-1000">(GMT-10:00)</option>
+					<option value="-900">(GMT-09:00)</option>
+					<option value="-800" selected>(GMT-08:00)</option>
+					<option value="-700">(GMT-07:00)</option>
+					<option value="-600">(GMT-06:00)</option>
+					<option value="-500">(GMT-05:00)</option>
+					<option value="-400">(GMT-04:00)</option>
+					<option value="-330">(GMT-03:30)</option>
+					<option value="-300">(GMT-03:00)</option>
+					<option value="-200">(GMT-02:00)</option>
+					<option value="-100">(GMT-01:00)</option>
+					<option value="0">(GMT+00:00)</option>
+					<option value="100">(GMT+01:00)</option>
+					<option value="200">(GMT+02:00)</option>
+					<option value="300">(GMT+03:00)</option>
+					<option value="330">(GMT+03:30)</option>
+					<option value="400">(GMT+04:00)</option>
+					<option value="430">(GMT+04:30)</option>
+					<option value="500">(GMT+05:00)</option>
+					<option value="530">(GMT+05:30)</option>
+					<option value="545">(GMT+05:45)</option>
+					<option value="600">(GMT+06:00)</option>
+					<option value="630">(GMT+06:30)</option>
+					<option value="700">(GMT+07:00)</option>
+					<option value="800">(GMT+08:00)</option>
+					<option value="900">(GMT+09:00)</option>
+					<option value="930">(GMT+09:30)</option>
+					<option value="100">(GMT+10:00)</option>
+					<option value="110">(GMT+11:00)</option>
+					<option value="120">(GMT+12:00)</option>
+					<option value="120">(GMT+12:00)</option>
+					<option value="130">(GMT+13:00)</option>
+				</select>
 			<input type="checkbox" name="time_dst" id="time_dst"> Summer Time
-			<hr style="height:2px; visibility:hidden;" />
+			<div class="txt_small"><br></div>
 			NTP Server <input type="text" name="ntp_server" id="ntp_server" value="pool.ntp.org">
 			<button id="SY-btn" class="btn btn--s btn--blue">Sync</button>
             <div class="txt_small">Last Sync: <span id=last_sync>AAA</span></div>
-			<br>
+			<div class="br_small"><br></div>
+			<div class="txt_small">Sol. Hold <input class="txt_small" type="text" name="sol_hold" id="sol_hold" value="400" maxlength="4" size="4"></div>
+			<div class="br_small"><br></div>
 	<div>
 		<button id="Q1-btn" class="btn btn--s btn--blue">Test Q1</button>
 		<button id="HF-btn" class="btn btn--s btn--blue">Test Half</button>
@@ -246,6 +248,8 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 			var time_srv_val = e.value;
 			e = document.getElementById("mute_enab");
 			var mute_enab_val = e.checked;
+			e = document.getElementById("sol_hold");
+			var sol_hold_val = e.value;
 			postData("/SAVE", {
 				tz: tz_val, 
 				dst: time_dst_val,
@@ -253,7 +257,8 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 				server: time_srv_val,
 				mute: mute_enab_val,
 				mute_start: mute_start_val,
-				mute_end: mute_end_val
+				mute_end: mute_end_val,
+				sol_hold: sol_hold_val
 			});
 			updateMuteTime();
 		}
