--- a/data/index.html
+++ b/data/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta http-equiv="refresh" content="1800" />
+  <link rel="icon" href="/favicon.png">
   <title>Scoops' Clock</title>
 </head>
 <body id="index" style="margin:0; padding:0;" onload="onBodyLoad()">
@@ -88,45 +89,10 @@
 			<div class="txt_small"><br></div>
 			<div>Timezone</div>
 				<select  id="time_tz" name="time_tz">
-					<option value="-1200">(GMT-12:00)</option>
-					<option value="-1100">(GMT-11:00)</option>
-					<option value="-1000">(GMT-10:00)</option>
-					<option value="-900">(GMT-09:00)</option>
-					<option value="-800" selected>(GMT-08:00)</option>
-					<option value="-700">(GMT-07:00)</option>
-					<option value="-600">(GMT-06:00)</option>
-					<option value="-500">(GMT-05:00)</option>
-					<option value="-400">(GMT-04:00)</option>
-					<option value="-330">(GMT-03:30)</option>
-					<option value="-300">(GMT-03:00)</option>
-					<option value="-200">(GMT-02:00)</option>
-					<option value="-100">(GMT-01:00)</option>
-					<option value="0">(GMT+00:00)</option>
-					<option value="100">(GMT+01:00)</option>
-					<option value="200">(GMT+02:00)</option>
-					<option value="300">(GMT+03:00)</option>
-					<option value="330">(GMT+03:30)</option>
-					<option value="400">(GMT+04:00)</option>
-					<option value="430">(GMT+04:30)</option>
-					<option value="500">(GMT+05:00)</option>
-					<option value="530">(GMT+05:30)</option>
-					<option value="545">(GMT+05:45)</option>
-					<option value="600">(GMT+06:00)</option>
-					<option value="630">(GMT+06:30)</option>
-					<option value="700">(GMT+07:00)</option>
-					<option value="800">(GMT+08:00)</option>
-					<option value="900">(GMT+09:00)</option>
-					<option value="930">(GMT+09:30)</option>
-					<option value="100">(GMT+10:00)</option>
-					<option value="110">(GMT+11:00)</option>
-					<option value="120">(GMT+12:00)</option>
-					<option value="120">(GMT+12:00)</option>
-					<option value="130">(GMT+13:00)</option>
 				</select>
-			<input type="checkbox" name="time_dst" id="time_dst"> Summer Time
 			<div class="txt_small"><br></div>
-			NTP Server <input type="text" name="ntp_server" id="ntp_server" value="pool.ntp.org">
-			<button id="SY-btn" class="btn btn--s btn--blue">Sync</button>
+			<div>NTP Server</div>
+			 	<input type="text" name="ntp_server" id="ntp_server" value="pool.ntp.org">
             <div class="txt_small">Last Sync: <span id=last_sync>AAA</span></div>
 			<div class="br_small"><br></div>
 			<div class="txt_small">Sol. Hold <input class="txt_small" type="text" name="sol_hold" id="sol_hold" value="400" maxlength="4" size="4"></div>
@@ -140,11 +106,15 @@
           <div class="txt_small">Software: <span id=clock_software_id>SSS</span> <span id=clock_software>SSS</span></div>
   </div>
 	<script>
-	document.getElementById("curr_time").textContent="tttt";
-document.getElementById("clock_name").textContent="nnnn";
-document.getElementById("clock_ip").textContent="ipipipipipipi";
+		var tzURLs = ['https://raw.githubusercontent.com/nayarsystems/posix_tz_db/master/zones.json', 
+	            'defaultzones.json'];
+		var tzucounter = 0;
 
-		updateMuteTime();
+		document.getElementById("curr_time").textContent="tttt";
+		document.getElementById("clock_name").textContent="nnnn";
+		document.getElementById("clock_ip").textContent="ipipipipipipi";
+		
+		updateStuff();
 		setInterval(updateStuff, 1*60*1000); // Minutes
 		setInterval(updateSecs, 1000); // Seconds
 		const butt_Sv = document.getElementById('SV-btn');
@@ -154,13 +124,11 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 		const butt_hr = document.getElementById('HR-btn');
 		const butt_m1 = document.getElementById('M1-btn');
 		const butt_mr = document.getElementById('MR-btn');
-		const butt_sy = document.getElementById('SY-btn');
 		butt_Sv.addEventListener('click', _ => {saveData()});
 		butt_q1.addEventListener('click', _ => {fetch('TESTq1', { method: 'POST'})});
 		butt_hf.addEventListener('click', _ => {fetch('TESThf', { method: 'POST'})});
 		butt_q3.addEventListener('click', _ => {fetch('TESTq3', { method: 'POST'})});
 		butt_hr.addEventListener('click', _ => {fetch('TESThr', { method: 'POST'})});
-		butt_sy.addEventListener('click', _ => {fetch('SYNCNow', { method: 'POST'})});
 		butt_m1.addEventListener('click', _ => {
 			fetch('MUTE1',  { method: 'POST'});
 			updateMuteTime();
@@ -170,7 +138,9 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 			updateMuteTime();
 		});
 		window.onload = function () {
-			load("revision.js","js");
+			tzucounter = 0;
+			loadTZList(tzURLs[tzucounter]);
+			load("revision.js","js", function() {});
 			load("style.css","css", function() {
 				load("microajax.js","js", function() {
 					setValues("/values");
@@ -235,15 +205,14 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 		}
 		function saveData() {
 			var e = document.getElementById("time_tz");
-			var tz_val = e.options[e.selectedIndex].value;
+			var tz_name = e.options[e.selectedIndex].text;
+			var tz_val  = e.options[e.selectedIndex].value;
 			e = document.getElementById("clock_mode");
 			var clock_mode_val = e.options[e.selectedIndex].value;
 			e = document.getElementById("mute_start");
 			var mute_start_val = e.options[e.selectedIndex].value;
 			e = document.getElementById("mute_end");
 			var mute_end_val = e.options[e.selectedIndex].value;
-			e = document.getElementById("time_dst");
-			var time_dst_val = e.checked;
 			e = document.getElementById("ntp_server");
 			var time_srv_val = e.value;
 			e = document.getElementById("mute_enab");
@@ -251,8 +220,8 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 			e = document.getElementById("sol_hold");
 			var sol_hold_val = e.value;
 			postData("/SAVE", {
-				tz: tz_val, 
-				dst: time_dst_val,
+				tzn: tz_name, 
+				tz: tz_val,
 				mode: clock_mode_val,
 				server: time_srv_val,
 				mute: mute_enab_val,
@@ -273,6 +242,36 @@ document.getElementById("clock_ip").textContent="ipipipipipipi";
 				body: JSON.stringify(data), // body data type must match "Content-Type" header
 			});
 		}
+		function loadTZList(url) {
+			if (tzucounter < tzURLs.length) {
+				fetch(url).then(function(response) {
+					return response.json();
+				}).then(function(json) {
+					fillTZlist(json);
+				}).catch(function(error) {
+					tzucounter++;
+					// Fetch next URL
+					return loadTZList(tzURLs[tzucounter]);
+				});
+			}
+		};
+
+		function fillTZlist(tzJson) {
+			tz_select = document.getElementById("time_tz");
+			// Clear list
+			var i, L = tz_select.options.length - 1;
+			for(i = L; i >= 0; i--) {
+				tz_select.remove(i);	
+			}
+			// Add all
+			for (let key in tzJson) {
+				var option = document.createElement("option");
+				option.value = tzJson[key];
+				option.textContent = key;
+				tz_select.appendChild(option);
+			};
+		}
+
 	</script>
 </body>
 </html>
